<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.saphyra</groupId>
    <artifactId>apphub-integration</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>apphub-integration</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>

        <!-- Platform Versions -->
        <versions.maven-surefire-plugin>3.5.4</versions.maven-surefire-plugin>
        <versions.postgresql-connector>42.7.8</versions.postgresql-connector>

        <!-- Lib Versions -->
        <versions.assertj-core>3.27.6</versions.assertj-core>
        <versions.jackson-datatype>2.20.1</versions.jackson-datatype>
        <versions.rest-assured>5.5.6</versions.rest-assured>
        <versions.testng>7.11.0</versions.testng>
        <versions.logback-classic>1.5.20</versions.logback-classic>
        <versions.awaitility>4.3.0</versions.awaitility>
        <versions.java-websocket>1.6.0</versions.java-websocket>
        <versions.guava>33.5.0-jre</versions.guava>
        <versions.apache-commons-pool>2.12.1</versions.apache-commons-pool>
        <versions.gson>2.13.2</versions.gson>
        <versions.jackson-databind>3.0.1</versions.jackson-databind>
        <versions.selenium>4.43.0</versions.selenium>

        <!-- Plugin Versions -->
        <versions.maven-compiler-plugin>3.14.1</versions.maven-compiler-plugin>
        <versions.lombok>1.18.42</versions.lombok>
        <versions.lombok-maven>1.18.20.0</versions.lombok-maven>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>${versions.java-websocket}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${versions.lombok}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-maven</artifactId>
            <version>${versions.lombok-maven}</version>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${versions.logback-classic}</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${versions.rest-assured}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${versions.assertj-core}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${versions.testng}</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${versions.postgresql-connector}</version>
        </dependency>

        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${versions.awaitility}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${versions.selenium}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${versions.guava}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>${versions.apache-commons-pool}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${versions.jackson-datatype}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${versions.gson}</version>
        </dependency>

        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${versions.jackson-databind}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${versions.maven-surefire-plugin}</version>
                <configuration>
                    <parallel>methods</parallel>
                    <!--suppress MavenModelInspection -->
                    <threadCount>${threadCount}</threadCount>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${versions.maven-compiler-plugin}</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${versions.lombok}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
